--- a/style.css
+++ b/style.css
@@ -37,4 +37,13 @@ img {
   .header {
     grid-template-columns: repeat(2, 1fr);
   }
+  .landscape {
+    display: none;
+}
+}
+
+@media (max-width: 960px) {
+  .square {
+    display: none;
+  }
 }
