--- a/style.css
+++ b/style.css
@@ -38,13 +38,13 @@ img {
     grid-template-columns: repeat(2, 1fr);
   }
 
-  .landscape {
+  #landscape {
     display: none;
   }
 }
 
 @media (max-width: 960px) {
-  .square {
+  #square {
     display: none;
   }
 }
